css: add max-width: 100% to .progress to prevent overflow

--- a/static/css/walldisplay.css
+++ b/static/css/walldisplay.css
@@ -40,6 +40,7 @@ body {
   position: absolute;
   height: 100%;
   box-shadow: inset 1px 4px 9px -6px #000;
+  max-width: 100%;
 }
 
 .job-container.fail {
